--- a/src/components/card.css
+++ b/src/components/card.css
@@ -1,12 +1,17 @@
-body{
+body {
     background-color: #07032B !important;
     min-height: 100vh;
 }
-.row {
-    max-height: fit-content;
-    background: #07032B;
+
+.row1 {
+    /* background: none; */
     width: 100%;
-    margin: 0px !important;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
 }
 
 .carousel-control-prev-icon,
@@ -18,23 +23,25 @@ body{
     border-radius: 50%;
 }
 
-.card {
-    margin-top: 15px !important;
-    padding: 15px;
-    background-color: whitesmoke;
-    border: 1px white solid !important;
-    border-radius: 25px !important;
-    margin-bottom: 20px;
+.cards {
+    color: whitesmoke;
     text-align: center;
-    width: 100% !important;
-    color: #07032B !important;
+    width: 100%;
+    height: 350px;
+    margin-bottom: 15px;
+    margin-top: 10px;
+    padding: 10px 0px;
+    
 }
+.card-name{
+    font-size: 13px;
+}
+.cards img {
 
-.card img {
-    width: 200px !important;
+    width: 200px;
     height: 220px;
-    margin: auto;
-
+    border-radius: 15px;
+    margin-bottom: 10px;
 }
 
 .View-button {
@@ -46,7 +53,7 @@ body{
 }
 
 .back-button {
-    /* background: linear-gradient(to left, #1a93b8, #e6a9e1); */
+
     background: #2798ee;
     text-decoration: none;
     padding: 10px 15px;
