--- a/src/pages/Welcome.css
+++ b/src/pages/Welcome.css
@@ -12,18 +12,18 @@
     background-size: cover;
     background-position: center;
 }
-.ul{
-    left: 15%;
+
+.ul {
     position: absolute;
     top: 50%;
-    transform: translateY(-50% ,-50%);
-    margin-top: 100px;
-    padding: 5px;
+    left: 50%;
+    transform: translate(-50%);
     display: flex;
-
+    margin-top: 30px;
 }
-.ul li{
-    list-style: none ;
+
+.ul li {
+    list-style: none;
     font-family: arial;
     font-size: 3em;
     letter-spacing: 15px;
@@ -31,65 +31,82 @@
     animation: animate 1s infinite linear;
 
 }
-@keyframes animate{
-    0%{
+
+@keyframes animate {
+    0% {
         color: #484848;
         text-shadow: none;
     }
-    18%{
+
+    18% {
         color: #484848;
         text-shadow: none;
     }
-    20%{
+
+    20% {
         color: #25a9d1;
-        text-shadow: 0 0 7px #25a9d1,0 0 20px #14b5e6;
+        text-shadow: 0 0 7px #25a9d1, 0 0 20px #14b5e6;
     }
-    30%{
+
+    30% {
         color: #484848;
         text-shadow: none;
     }
-    35%{
-        color:#25a9d1 ;
-        text-shadow:  0 0 7px #25a9d1 ,0 0 20px #14b5e6
-    }
-    70%{
-        color: #484848;
-        text-shadow:none;
-    }
-    85%{
+
+    35% {
         color: #25a9d1;
-        text-shadow:  0 0 7px #25a9d1 ,0 0 20px #14b5e6
+        text-shadow: 0 0 7px #25a9d1, 0 0 20px #14b5e6
     }
-    90%{
+
+    70% {
         color: #484848;
         text-shadow: none;
     }
-        100%{
-            color: #484848;
-            text-shadow: none;
-        }
+
+    85% {
+        color: #25a9d1;
+        text-shadow: 0 0 7px #25a9d1, 0 0 20px #14b5e6
+    }
+
+    90% {
+        color: #484848;
+        text-shadow: none;
+    }
+
+    100% {
+        color: #484848;
+        text-shadow: none;
+    }
 }
-.ul li:nth-child(1){
-    animation : animate .2s linear infinite alternate;
+
+.ul li:nth-child(1) {
+    animation: animate .2s linear infinite alternate;
 }
-.ul li:nth-child(2){
-    animation : animate .4s linear infinite alternate;
+
+.ul li:nth-child(2) {
+    animation: animate .4s linear infinite alternate;
 }
-.ul li:nth-child(3){
-    animation : animate .6s linear infinite alternate;
+
+.ul li:nth-child(3) {
+    animation: animate .6s linear infinite alternate;
 }
-.ul li:nth-child(4){
-    animation : animate .8s linear infinite alternate;
+
+.ul li:nth-child(4) {
+    animation: animate .8s linear infinite alternate;
 }
-.ul li:nth-child(5){
-    animation : animate 1s linear infinite alternate;
+
+.ul li:nth-child(5) {
+    animation: animate 1s linear infinite alternate;
 }
-.ul li:nth-child(6){
-    animation : animate 1.2s linear infinite alternate;
+
+.ul li:nth-child(6) {
+    animation: animate 1.2s linear infinite alternate;
 }
-.ul li:nth-child(7){
-    animation : animate 1.4s linear infinite alternate;
+
+.ul li:nth-child(7) {
+    animation: animate 1.4s linear infinite alternate;
 }
+
 .box::before {
     content: "";
     position: absolute;
@@ -133,7 +150,8 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: transparent;
 }
-.content button{
+
+.content button {
     width: 100%;
     height: 80%;
     background-color: transparent;
@@ -144,7 +162,7 @@
     cursor: pointer;
     font-size: 15px;
     font-weight: 600;
-    background: linear-gradient(to right,#25748D ,#EE93E8);
+    background: linear-gradient(to right, #25748D, #EE93E8);
 }
 
 .login {
@@ -157,58 +175,68 @@
 .login button {
     padding: 10px 10px;
     width: 100%;
-    background: linear-gradient(to right,#25748D ,#EE93E8);
-    border:none;
+    background: linear-gradient(to right, #25748D, #EE93E8);
+    border: none;
     border-radius: 25px;
     color: white;
     font-size: 15px;
     cursor: pointer;
     font-weight: 600;
 }
-.kids-section{
-    display: flex;
-    flex-wrap: wrap;
+
+.kids-section {
+    /* display: flex;
+    flex-wrap: wrap; */
     background-color: rgb(0, 0, 0);
     width: 100%;
-    height: 75%;
+    height: 100vh;
     align-items: center;
     position: relative;
     background-repeat: no-repeat;
 }
-.section-image{
+
+.section-image {
     background-image: url(https://occ-0-6661-56.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABejKYujIIDQciqmGJJ8BtXkYKKTi5jiqexltvN1YmvXYIfX8B9CYwooUSIzOKneblRFthZAFsYLMgKMyNfeHwk16DmEkpIIcb6A3.png?r=f55);
     position: absolute;
-    width: 50%;
-    height: 100%;
-    flex-wrap: wrap;
+    width: 100%;
+    height: 130vh;
     background-repeat: no-repeat;
-    background-position: center center;
     background-size: cover;
+}
+
+.section-image img {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
 
 }
-.section-image img{
-    position: absolute;
-    bottom:  0;
-    flex-wrap: wrap;
 
-}
-.section-title{
-    width: 50%;
-    flex-wrap: wrap;
-
-    text-align: center;
-    line-height: 1.5;
-    display: flex;
-    flex-wrap: wrap;
+.section-title {
+    width: 65%;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
     color: white;
-    right: 5%;
-    font-size: 24px;
+    font-size: 40px;
+    line-height: 1.5;
+    text-transform: capitalize;
     font-weight: 900;
+    text-align: center;
+}
+
+.section-image::before {
+    content: "";
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.527);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 @media (max-width:768px) {
-    
+
     .logo {
         width: 10%;
         position: absolute;
@@ -217,11 +245,13 @@
         width: 65px;
         height: 40px;
     }
-    .content p{
+
+    .content p {
         font-size: 25px;
         width: 234px;
-       
+
     }
+
     .login {
         width: 10%;
         position: absolute;
@@ -229,19 +259,54 @@
         right: 20%;
         padding: 0;
     }
-    .login button{
+
+    .login button {
         display: block;
         width: 85px;
         height: 40px;
     }
-    .login a{
+
+    .login a {
         text-decoration: none !important;
     }
-    .content button{
+
+    .content button {
         width: 100%;
         height: 70%;
         margin-top: 35px;
-    }.ul{
-        display: none;
+    }
+
+    .section-title .ul {
+        font-size: 8px;
+        position: absolute;
+        top: -95%;
+        left: 30%;
+        width: 100%;
+        transform: translate(-50%);
+    }
+
+    .section-image {
+        background-image: url(https://occ-0-6661-56.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABejKYujIIDQciqmGJJ8BtXkYKKTi5jiqexltvN1YmvXYIfX8B9CYwooUSIzOKneblRFthZAFsYLMgKMyNfeHwk16DmEkpIIcb6A3.png?r=f55);
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        background-size: cover;
+        background-position: center;
+    }
+
+    .section-title p{
+        font-size: 25px;
+    }
+    .section-image img{
+        width: 100%;
+    height: 100vh;
+    position: absolute;
+    }
+    .section-title {
+        width: 80%;
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        transform: translate(-50%);
     }
 }
